--- a/index.html
+++ b/index.html
@@ -1,35 +1,26 @@
-
 <!DOCTYPE html>
-<html lang="ur">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jump Hero</title>
-  <link rel="stylesheet" href="style.css">
-
-  <!-- Manifest -->
-  <link rel="manifest" href="manifest.json">
-
-  <!-- Theme Color -->
-  <meta name="theme-color" content="#ACAF50">
-
-  <!-- Icons -->
-  <link rel="icon" href="icon-192.png" type="image/png">
-  <link rel="apple-touch-icon" href="icon-512.png">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="icon-192.png" type="image/png" />
 </head>
 <body>
-  <div class="game">
-    <div id="player"></div>
-    <div id="obstacle"></div>
+  <div class="game-container">
+    <div id="hero"></div>
+    <div id="ground"></div>
+    <div id="score">Score: 0</div>
   </div>
 
   <script src="script.js"></script>
-
-  <!-- Register Service Worker -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('Service Worker Registered'));
+        .then(reg => console.log("Service Worker Registered"))
+        .catch(err => console.error("Service Worker registration failed:", err));
     }
   </script>
 </body>
